--- a/Ayo/Ayo.vcxproj.filters
+++ b/Ayo/Ayo.vcxproj.filters
@@ -1,36 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Ayo">
+      <UniqueIdentifier>{6ED7870B-DAE0-877C-635C-9E7CCF64937C}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Ayo\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Ayo.h" />
     <ClInclude Include="src\Ayo\Application.h">
-      <Filter>Header Files</Filter>
+      <Filter>Ayo</Filter>
     </ClInclude>
-    <ClInclude Include="src\Ayo.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\Ayo\Core.h">
+      <Filter>Ayo</Filter>
     </ClInclude>
     <ClInclude Include="src\Ayo\EntryPoint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Ayo</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Ayo\Log.h">
+      <Filter>Ayo</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Ayo\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Ayo</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Ayo\Log.cpp">
+      <Filter>Ayo</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
