--- a/Ayo/Ayo.vcxproj
+++ b/Ayo/Ayo.vcxproj
@@ -140,6 +140,8 @@
     <ClInclude Include="src\Ayo\Core.h" />
     <ClInclude Include="src\Ayo\EntryPoint.h" />
     <ClInclude Include="src\Ayo\Events\Event.h" />
+    <ClInclude Include="src\Ayo\Events\KeyEvent.h" />
+    <ClInclude Include="src\Ayo\Events\MouseEvent.h" />
     <ClInclude Include="src\Ayo\Log.h" />
   </ItemGroup>
   <ItemGroup>
