--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Ayo/vendor/spdlog"]
 	path = Ayo/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Ayo/vendor/glfw"]
+	path = Ayo/vendor/glfw
+	url = https://github.com/bannified/glfw
