--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=627,17
+Pos=705,62
 Size=550,680
 Collapsed=0
 
 [Window][Another Window]
-Pos=60,60
+Pos=415,61
 Size=198,71
+Collapsed=0
+
+[Window][Example: Console]
+Pos=58,59
+Size=520,600
 Collapsed=0
 
