Add Resize events to ImGuiLayer

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=709,-14
-Size=550,680
+Pos=586,19
+Size=435,616
 Collapsed=0
 
 [Window][Another Window]
