--- a/Ayo/Ayo.vcxproj.filters
+++ b/Ayo/Ayo.vcxproj.filters
@@ -67,6 +67,8 @@
     <ClInclude Include="src\ayopch.h" />
     <ClInclude Include="src\Ayo\Input.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
+    <ClInclude Include="src\Ayo\Macros\Keycodes.h" />
+    <ClInclude Include="src\Ayo\Macros\MouseButtonCodes.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Ayo\Application.cpp">
