--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=781,35
-Size=435,616
+Pos=517,102
+Size=662,366
 Collapsed=0
 
 [Window][Another Window]
@@ -17,4 +17,24 @@ Collapsed=0
 Pos=58,59
 Size=520,600
 Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Log]
+Pos=436,496
+Size=844,224
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Test]
+Pos=163,156
+Size=305,289
+Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0x3BC79352 Pos=201,249 Size=1280,701 Split=Y
+  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=1280,475 CentralNode=1 SelectedTab=0xE927CF2F
+  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1280,224 SelectedTab=0xBF126D42
 
