--- a/Ayo/Ayo.vcxproj.filters
+++ b/Ayo/Ayo.vcxproj.filters
@@ -19,9 +19,6 @@
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Platform\OpenGL">
-      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
     </Filter>
@@ -95,9 +92,6 @@
     </ClInclude>
     <ClInclude Include="src\Ayo\Window.h">
       <Filter>src\Ayo</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\OpenGL\imgui_impl_opengl3.h">
-      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
@@ -1208,6 +1202,9 @@
     <ClCompile Include="src\Ayo\Events\Event.cpp">
       <Filter>src\Ayo\Events</Filter>
     </ClCompile>
+    <ClCompile Include="src\Ayo\ImGui\ImGuiBuild.cpp">
+      <Filter>src\Ayo\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="src\Ayo\ImGui\ImGuiLayer.cpp">
       <Filter>src\Ayo\ImGui</Filter>
     </ClCompile>
@@ -1219,9 +1216,6 @@
     </ClCompile>
     <ClCompile Include="src\Ayo\Log.cpp">
       <Filter>src\Ayo</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\imgui_impl_opengl3.cpp">
-      <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
