--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=576,127
+ViewportPos=803,448
+ViewportId=0xE927CF2F
 Size=662,410
 Collapsed=0
 
@@ -29,7 +30,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Test]
-Pos=59,163
+Pos=48,32
 Size=305,289
 Collapsed=0
 
