Add OpenGL VertexBuffer, IndexBuffer, and Renderer

--- a/Ayo/Ayo.vcxproj
+++ b/Ayo/Ayo.vcxproj
@@ -140,6 +140,9 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
+    <ClInclude Include="src\Ayo\Renderer\Renderer.h" />
+    <ClInclude Include="src\Ayo\Renderer\Buffer.h" />
     <ClInclude Include="src\Ayo\Renderer\Shader.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Ayo\Renderer\GraphicsContext.h" />
@@ -528,6 +531,9 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
+    <ClCompile Include="src\Ayo\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Ayo\Renderer\Buffer.cpp" />
     <ClCompile Include="src\Ayo\Renderer\Shader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Ayo\Renderer\GraphicsContext.cpp" />
