--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1143,409
-ViewportId=0xE927CF2F
+Pos=537,177
 Size=662,410
 Collapsed=0
 
