--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=537,177
-Size=662,410
+ViewportPos=1320,347
+ViewportId=0xE927CF2F
+Size=662,423
 Collapsed=0
 
 [Window][Another Window]
@@ -29,9 +30,9 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Test]
-Pos=48,32
+Pos=54,11
 Size=305,289
-Collapsed=0
+Collapsed=1
 
 [Docking][Data]
 DockSpace   ID=0x3BC79352 Pos=201,249 Size=1280,701 Split=Y
