--- a/Ayo/Ayo.vcxproj.filters
+++ b/Ayo/Ayo.vcxproj.filters
@@ -1205,6 +1205,7 @@
     <ClInclude Include="src\Ayo\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Ayo\Renderer\RenderCommand.h" />
+    <ClInclude Include="src\Ayo\Renderer\Camera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Ayo\Application.cpp">
@@ -1245,5 +1246,6 @@
     <ClCompile Include="src\Ayo\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Ayo\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="src\Ayo\Renderer\Camera.cpp" />
   </ItemGroup>
 </Project>
