--- a/Ayo/Ayo.vcxproj.filters
+++ b/Ayo/Ayo.vcxproj.filters
@@ -1207,6 +1207,7 @@
     <ClInclude Include="src\Ayo\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Ayo\Renderer\Camera.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
+    <ClInclude Include="src\Ayo\Math\Quaternion.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Ayo\Application.cpp">
@@ -1249,5 +1250,6 @@
     <ClCompile Include="src\Ayo\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Ayo\Renderer\Camera.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
+    <ClCompile Include="src\Ayo\Math\Quaternion.cpp" />
   </ItemGroup>
 </Project>
